--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "template-chisfis-nextjs",
-  "version": "0.2.3",
+  "name": "360adventures-frontend-web",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -11,6 +11,9 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@hookform/resolvers": "^3.10.0",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-slot": "^1.1.2",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
@@ -19,17 +22,22 @@
     "@types/react": "18.2.37",
     "@types/react-datepicker": "^4.19.3",
     "@types/react-dom": "18.2.15",
+    "class-variance-authority": "^0.7.1",
     "client-only": "^0.0.1",
+    "clsx": "^2.1.1",
     "eslint": "8.54.0",
-    "eslint-config-next": "^14.0.3",
+    "eslint-config-next": "^15.1.6",
     "framer-motion": "^10.16.5",
     "google-map-react": "^2.2.1",
     "lodash": "^4.17.21",
-    "next": "^14.1.0",
+    "lucide-react": "^0.474.0",
+    "next": "^15.1.6",
+    "next-auth": "^4.24.11",
     "rc-slider": "^10.4.0",
-    "react": "^18.2.0",
+    "react": "^19.0.0",
     "react-datepicker": "^4.21.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-hooks-global-state": "^2.1.0",
     "react-swipeable": "^7.0.1",
     "react-use": "^17.4.0",
@@ -37,7 +45,11 @@
     "sass": "^1.69.5",
     "server-only": "^0.0.1",
     "sharp": "^0.33.2",
-    "typescript": "5.2.2"
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "5.2.2",
+    "yup": "^1.6.1",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
