--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.6",
+    "@reduxjs/toolkit": "^2.5.1",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
@@ -23,6 +24,7 @@
     "@types/react": "18.2.37",
     "@types/react-datepicker": "^4.19.3",
     "@types/react-dom": "18.2.15",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "client-only": "^0.0.1",
     "clsx": "^2.1.1",
@@ -30,6 +32,8 @@
     "eslint-config-next": "^15.1.6",
     "framer-motion": "^10.16.5",
     "google-map-react": "^2.2.1",
+    "iron-session": "^8.0.4",
+    "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "lucide-react": "^0.474.0",
     "next": "^15.1.6",
@@ -40,6 +44,8 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-hooks-global-state": "^2.1.0",
+    "react-redux": "^9.2.0",
+    "react-spinners": "^0.15.0",
     "react-swipeable": "^7.0.1",
     "react-use": "^17.4.0",
     "react-use-keypress": "^1.3.1",
@@ -53,6 +59,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@types/cookie": "^0.6.0",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5"
