--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "sass": "^1.69.5",
     "server-only": "^0.0.1",
     "sharp": "^0.33.2",
+    "sweetalert2": "^11.16.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
