--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-redux": "^9.2.0",
     "react-spinners": "^0.15.0",
     "react-swipeable": "^7.0.1",
+    "react-transition-group": "^4.4.5",
     "react-use": "^17.4.0",
     "react-use-keypress": "^1.3.1",
     "sass": "^1.69.5",
