--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "lucide-react": "^0.474.0",
-    "next": "^15.1.6",
+    "next": "14.1.0",
     "next-auth": "^4.24.11",
     "rc-slider": "^10.4.0",
     "react": "^18.2.0",
