--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "lucide-react": "^0.474.0",
     "next": "14.1.0",
     "next-auth": "^4.24.11",
+    "nextjs-toploader": "^3.7.15",
     "rc-slider": "^10.4.0",
     "react": "^18.2.0",
     "react-datepicker": "^4.21.0",
